steps/2.calico/5.netpo/3_netpol_nodeport/allow-demo1-nodeport.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-demo1-nodeport
  namespace: demo1
spec:
  podSelector: 
    matchLabels:
      app: nginx-test
  policyTypes:
  - Ingress
  ingress:
  - ports:
    - protocol: TCP
      port: 80
